Make IF quantification pipeline headless-safe and testable